--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-<nav>
-    <ul>
-        <li>
-            <header class="main"></header>
-        </li>
-        <li>
-            <section class="o-nas">
-                <p>tekst</p>
-            </section>
-        </li>
-        <li>
-            <section class="kontakt"></section>
-        </li>
-        <li>
-            <footer class="footer"></footer>
-        </li>
-    </ul>
-</nav>
-
+<table border=1>
+    <tr>
+      <th>Kolumna 1</th>
+      <th>Kolumna 2</th>
+      <th>Kolumna 3</th>
+    </tr>
+    <tr>
+      <td>wiersz 1</td>
+      <td>wiersz 2</td>
+      <td>wiersz 3</td>
+    </tr>
+    <tr>
+      <td>wiersz 4</td>
+      <td>wiersz 5</td>
+      <td>wiersz 6</td>
+    </tr>
+    <tr>
+        <td>wiersz 7</td>
+        <td>wiersz 8</td>
+        <td>wiersz 9</td>
+      </tr>
+</table>
 </body>
 </html>
