--- a/index.html
+++ b/index.html
@@ -7,24 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-<table border=1>
-    <tr>
-      <th>Kolumna 1</th>
-      <th colspan="3">Kolumna 2</th>
-    </tr>
-    <tr>
-        <td>wiersz 1</td>
-        <td rowspan ="2">wiersz 2</td>
-        <td>wiersz 3</td>
-    </tr>
-        <td>wiersz 4</td>
-        <td>wiersz 6</td>
-    </tr>
-    </tr>
-        <td>wiersz 6</td>
-        <td>wiersz 7</td>
-        <td>wiersz 8</td>
-    </tr>
-</table>
+<form>
+    <label for="Imię">Imię</label><br>
+    <input type="text" id="Imię"><br>
+    <label for="Nazwisko">Nazwisko </label><br>
+    <input type="text" id="Nazwisko"><br>
+    <input type="submit" value="Wyślij">
+</form>
 </body>
 </html>
