--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-<form>
-    <label for="Imię">Imię</label><br>
-    <input type="text" id="Imię"><br>
-    <label for="Nazwisko">Nazwisko </label><br>
-    <input type="text" id="Nazwisko"><br>
-    <input type="submit" value="Wyślij">
-</form>
+<table border=1>
+    <tr>
+      <th>Kolumna 1</th>
+      <th>Kolumna 2</th>
+      <th>Kolumna 3</th>
+      <th colspan="3">Kolumna 2</th>
+    </tr>
+    <tr>
+      <td>wiersz 1</td>
+      <td>wiersz 2</td>
+      <td>wiersz 3</td>
+        <td>wiersz 1</td>
+        <td rowspan ="2">wiersz 2</td>
+        <td>wiersz 3</td>
+    </tr>
+    <tr>
+      <td>wiersz 4</td>
+      <td>wiersz 5</td>
+      <td>wiersz 6</td>
+        <td>wiersz 4</td>
+        <td>wiersz 6</td>
+    </tr>
+    <tr>
+    </tr>
+        <td>wiersz 6</td>
+        <td>wiersz 7</td>
+        <td>wiersz 8</td>
+        <td>wiersz 9</td>
+      </tr>
+    </tr>
+</table>
 </body>
-</html>
+</html> 
