--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<table border=1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <table border=1>
     <tr>
       <th>Kolumna 1</th>
       <th colspan="3">Kolumna 2</th>
@@ -20,6 +29,5 @@
         <td>wiersz 8</td>
       </tr>
     </tr>
-</table>
 </body>
-</html> 
+</html>
